# rules_swiftformat

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  bazel_versions.bzl  shared.bazelrc  swift_deps.bzl  swift_deps_index.json
.github/: renovate.json
.github/actions/build_and_test/: action.yml
.github/workflows/: bazel.yml  ci.yml  create_release.yml  scheduled_builds.yml
doc/: BUILD.bazel  README.md  api.md  how_it_works.md  integrate_with_rules_swift.md  providers.md  providers_overview.md  repository_rules_overview.md  rules_and_macros_overview.md  src_utils.md  swiftformat_rules_and_macros_overview.md
examples/: BUILD.bazel  README.md  change_update_all_test.sh
examples/exclude_files/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
examples/exclude_files/Sources/App/: BUILD.bazel  exclude.swift  main.swift
examples/exclude_files/Sources/Foo/: BUILD.bazel  Message.swift  PoorlyFormatted.swift
examples/exclude_files/Tests/FooTests/: BUILD.bazel  MessageTests.swift  PoorlyFormattedTests.swift  main.swift
examples/legacy/: .bazelrc  BUILD.bazel  README.md  WORKSPACE
examples/legacy/Foo/: BUILD.bazel
examples/rules_swift_helpers/: MODULE.bazel  README.md  WORKSPACE
examples/rules_swift_helpers/Sources/App/: BUILD.bazel
examples/rules_swift_helpers/Sources/Foo/: BUILD.bazel
examples/rules_swift_helpers/Tests/AppTests/: simple_test.sh
examples/rules_swift_helpers/Tests/FooTests/: BUILD.bazel  MessageTests.swift  main.swift
examples/simple/: .swiftformat  BUILD.bazel  MODULE.bazel  WORKSPACE  main.swift  swiftformat_test.sh  update_all  update_all.sh
examples/simple/Foo/: BUILD.bazel  Message.swift
examples/swift_rule_helpers/: BUILD.bazel  README.md  WORKSPACE  simple_test.sh
examples/swift_rule_helpers/Foo/: BUILD.bazel  Message.swift
examples/swift_rule_helpers/Sources/App/: BUILD.bazel
examples/swift_rule_helpers/Sources/Foo/: BUILD.bazel
examples/swift_rule_helpers/Tests/AppTests/: BUILD.bazel
examples/swift_rule_helpers/Tests/FooTests/: BUILD.bazel  MessageTests.swift
examples/swift_rules_helpers/: BUILD.bazel
examples/swift_rules_helpers/Sources/Foo/: Message.swift
release/: BUILD.bazel  workspace_snippet.tmpl
scripts/: BUILD.bazel
swiftformat/: BUILD.bazel  defs.bzl  deps.bzl  extensions.bzl  load_package.bzl  swiftformat.bzl
swiftformat/bzlmod/: BUILD.bazel  swift_tidy_tools.bzl
swiftformat/internal/: BUILD.bazel  providers.bzl  sfmt_format.bzl  swift_format_binary.bzl  swift_format_library.bzl  swiftformat.bzl  swiftformat_binary.bzl  swiftformat_format.bzl  swiftformat_library.bzl  swiftformat_pkg.bzl  swiftformat_test.bzl  swiftformat_update.bzl  swiftformat_update_all.bzl
swiftformat/toolchains/: BUILD.bazel  assets.bzl  prebuilt_assets.bzl  toolchain.bzl
swiftformat_tools/: BUILD.bazel  toolchain.bzl
swifttidy/: BUILD.bazel  defs.bzl  deps.bzl  extensions.bzl
swifttidy/bzlmod/: BUILD.bazel  swift_tidy_tools.bzl
swifttidy/internal/: BUILD.bazel  src_utils.bzl  swiftformat_binary.bzl  swiftformat_format.bzl
swifttidy/toolchains/: BUILD.bazel  toolchain.bzl
tests/: BUILD.bazel  src_utils_tests.bzl
tests/toolchains_tests/: BUILD.bazel  prebuilt_assets_tests.bzl
tests/tools_tests/: BUILD.bazel  generate_assets_declaration_test.sh
tools/: BUILD.bazel  generate_assets_declaration.sh
