load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")

package(default_visibility = ["//visibility:public"])

bzlformat_pkg(
    name = "bzlformat",
    format_visibility = ["//visibility:private"],
    update_visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
)

bzl_library(
    name = "load_package",
    srcs = ["load_package.bzl"],
)

bzl_library(
    name = "swiftformat",
    srcs = ["swiftformat.bzl"],
    deps = [
        "//swiftformat/internal:providers",
        "//swiftformat/internal:src_utils",
        "//swiftformat/internal:swiftformat_binary",
        "//swiftformat/internal:swiftformat_format",
        "//swiftformat/internal:swiftformat_library",
        "//swiftformat/internal:swiftformat_pkg",
        "//swiftformat/internal:swiftformat_test",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
