load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

package(default_visibility = ["//visibility:public"])

bzlformat_pkg(
    name = "bzlformat",
    format_visibility = ["//visibility:private"],
    update_visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//swiftformat/internal:src_utils",
        "//swiftformat/internal:swiftformat_binary",
        "//swiftformat/internal:swiftformat_format",
        "//swiftformat/internal:swiftformat_library",
        "//swiftformat/internal:swiftformat_pkg",
        "//swiftformat/internal:swiftformat_test",
        "//swiftformat/toolchains:toolchain",
    ],
)

bzl_library(
    name = "swiftformat",
    srcs = ["swiftformat.bzl"],
    deps = [
        ":defs",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

toolchain_type(name = "toolchain")

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    deps = [
        "//swiftformat/toolchains:assets",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)
