load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//swifttidy:defs"],
)

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//swifttidy:deps"],
)

bzl_library(
    name = "swiftformat",
    srcs = ["swiftformat.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//swifttidy:defs"],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

bzlformat_pkg(name = "bzlformat")
