load("@bazel_skylib//rules:build_test.bzl", "build_test")
load(":src_utils_tests.bzl", "src_utils_test_suite")

build_test(
    name = "public_api",
    targets = [
        "//swiftformat:deps",
        "//swiftformat:load_package",
        "//swiftformat:swiftformat",
    ],
)

src_utils_test_suite()
