load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")
load(
    "@cgrindel_rules_swiftformat//swiftformat:swiftformat.bzl",
    "swiftformat_pkg",
    "swiftformat_update_all",
)

# MARK: - Swift Targets

swift_binary(
    name = "simple",
    srcs = ["main.swift"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//Foo",
    ],
)

sh_test(
    name = "simple_test",
    srcs = ["simple_test.sh"],
    data = [":simple"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

# MARK: - SwiftFormat Targets

# We only need to export this file if there are any other packages that need to
# reference the config file.
exports_files([".swiftformat"])

# Defines targets for this package which will format the Swift source files,
# test that the formatted files are in the workspace directory and copies
# the formatted files to the workspace directory.
swiftformat_pkg(
    name = "format",
    config = "//:.swiftformat",
)

# Defines a target that will copy all of the formatted Swift source files to
# the workspace directory.
swiftformat_update_all(
    name = "update_all",
)

# MARK: - SwiftFormat for Developer Targets

# Defines a convenient alias to execute the swiftformat executable.
alias(
    name = "swiftformat",
    actual = "@swiftformat_repos//SwiftFormat:swiftformat",
)

# This test is just making sure that the swiftformat alias executes properly.
sh_test(
    name = "swiftformat_test",
    srcs = ["swiftformat_test.sh"],
    data = [":swiftformat"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
