bazel_dep(
    name = "rules_swift_tidy",
    version = "0.0.0",
    dev_dependency = True,
)
local_path_override(
    module_name = "rules_swift_tidy",
    path = "../..",
)

bazel_dep(
    name = "rules_swift",
    version = "1.9.0",
    repo_name = "build_bazel_rules_swift",
)

bazel_dep(
    name = "cgrindel_bazel_starlib",
    version = "0.16.0",
    dev_dependency = True,
)
