bazel_dep(
    name = "rules_swift_tidy",
    version = "0.0.0",
    dev_dependency = True,
)
local_path_override(
    module_name = "rules_swift_tidy",
    path = "../..",
)

bazel_dep(name = "apple_support", version = "1.15.1")
bazel_dep(
    name = "rules_swift",
    version = "1.18.0",
    repo_name = "build_bazel_rules_swift",
)

bazel_dep(
    name = "cgrindel_bazel_starlib",
    version = "0.20.2",
    dev_dependency = True,
)

apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")
