load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "swift_tidy_tools",
    srcs = ["swift_tidy_tools.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//swiftformat/toolchains:prebuilt_assets",
        "//swiftformat/toolchains:toolchain",
    ],
)
