load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//swiftformat:__subpackages__"])

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "src_utils",
    srcs = ["src_utils.bzl"],
)

bzl_library(
    name = "swiftformat_format",
    srcs = ["swiftformat_format.bzl"],
    deps = [
        ":providers",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "swiftformat_pkg",
    srcs = ["swiftformat_pkg.bzl"],
    deps = [
        ":src_utils",
        ":swiftformat_format",
        ":swiftformat_update",
        "@bazel_skylib//rules:diff_test",
    ],
)

bzl_library(
    name = "swiftformat_update",
    srcs = ["swiftformat_update.bzl"],
    deps = [
        ":providers",
        "@bazel_skylib//lib:dicts",
    ],
)

bzl_library(
    name = "swiftformat_update_all",
    srcs = ["swiftformat_update_all.bzl"],
)

bzl_library(
    name = "swiftformat_library",
    srcs = ["swiftformat_library.bzl"],
    deps = [
        ":swiftformat_pkg",
        "@build_bazel_rules_swift//swift",
    ],
)

bzl_library(
    name = "swiftformat_binary",
    srcs = ["swiftformat_binary.bzl"],
    deps = [
        ":swiftformat_pkg",
        "@build_bazel_rules_swift//swift",
    ],
)

bzl_library(
    name = "swiftformat_test",
    srcs = ["swiftformat_test.bzl"],
    deps = [
        ":swiftformat_pkg",
        "@build_bazel_rules_swift//swift",
    ],
)
