load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

package(default_visibility = ["//swiftformat:__subpackages__"])

bzlformat_pkg(
    name = "bzlformat",
    format_visibility = ["//visibility:private"],
    update_visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "src_utils",
    srcs = ["src_utils.bzl"],
)

bzl_library(
    name = "swiftformat_format",
    srcs = ["swiftformat_format.bzl"],
    deps = [
        ":providers",
        "@bazel_skylib//lib:paths",
        "@cgrindel_bazel_starlib//updatesrc:defs",
    ],
)

bzl_library(
    name = "swiftformat_pkg",
    srcs = ["swiftformat_pkg.bzl"],
    deps = [
        ":src_utils",
        ":swiftformat_format",
        "@bazel_skylib//rules:diff_test",
        "@cgrindel_bazel_starlib//updatesrc:defs",
    ],
)

bzl_library(
    name = "swiftformat_library",
    srcs = ["swiftformat_library.bzl"],
    deps = [
        ":swiftformat_pkg",
        "@build_bazel_rules_swift//swift",
    ],
)

bzl_library(
    name = "swiftformat_binary",
    srcs = ["swiftformat_binary.bzl"],
    deps = [
        ":swiftformat_pkg",
        "@build_bazel_rules_swift//swift",
    ],
)

bzl_library(
    name = "swiftformat_test",
    srcs = ["swiftformat_test.bzl"],
    deps = [
        ":swiftformat_pkg",
        "@build_bazel_rules_swift//swift",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
