load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzl_library(
    name = "swiftformat_binary",
    srcs = ["swiftformat_binary.bzl"],
    visibility = ["//swiftformat:__subpackages__"],
    deps = [
        "//swifttidy:defs",
        "@build_bazel_rules_swift//swift",
    ],
)

bzl_library(
    name = "swiftformat_library",
    srcs = ["swiftformat_library.bzl"],
    visibility = ["//swiftformat:__subpackages__"],
    deps = [
        "//swifttidy:defs",
        "@build_bazel_rules_swift//swift",
    ],
)

bzl_library(
    name = "swiftformat_test",
    srcs = ["swiftformat_test.bzl"],  # keep
    visibility = ["//swiftformat:__subpackages__"],
    deps = [
        "//swifttidy:defs",
        "@build_bazel_rules_swift//swift",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

bzlformat_pkg(name = "bzlformat")
