load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "swift_tidy_tools",
    srcs = ["swift_tidy_tools.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//swifttidy/toolchains:prebuilt_assets",
        "//swifttidy/toolchains:toolchain",
    ],
)
