load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

sh_test(
    name = "generate_assets_declaration_test",
    srcs = ["generate_assets_declaration_test.sh"],
    data = [
        "//tools:generate_assets_declaration",
    ],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
    ],
)
