load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@rules_swift_tidy//swiftformat:defs.bzl", "swiftformat_pkg")

swift_library(
    name = "Foo",
    srcs = glob(["*.swift"]),
    module_name = "Foo",
    visibility = ["//:__subpackages__"],
)

swiftformat_pkg(
    name = "swiftformat",
    config = "//:.swiftformat",
)

bzlformat_pkg(name = "bzlformat")
